# intro-to-ml-project

./: .gitignore  README.md  pyproject.toml
notebooks/: mobilenet_model.ipynb  vit_model.ipynb
src/: data_module.py  loggers.py  model.py  utils.py
