[tool.poetry]
name = "ml_astr"
version = "0.1.0"
description = "final project for machine learning for astronomers MUNI course"
authors = ["petrKantek <485080@mail.muni.cz>"]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
jupyterlab = "^3.5.2"
pytorch-lightning = "^1.8.6"
wandb = "^0.13.7"
ipywidgets = "^8.0.4"
rich = "^12.6.0"
ray = {extras = ["tune"], version = "^2.2.0"}
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
